# SeedrMan

./: CMakeLists.txt  conanfile.txt
dependencies/: CMakeLists.txt
include/: library.h
test/: CMakeLists.txt  integration_tests.cpp
